--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </ul>
       </div>
       <div class="about-image" data-aos="fade-left">
-        <img src="images/yukki.png" alt="HackYukki 3D Art">
+        <img src="images/Yukki.png" alt="HackYukki 3D Art">
       </div>
     </div>
   </section>
