--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            data-aos-delay="300"
            data-aos-offset="0"
            data-aos-duration="1500">
-        <div class="logo">HackYukki</div>
+        <div class="logo"></div>
       </div>
     </div>
 
@@ -41,8 +41,7 @@
       <a href="#skills">Skills</a>
       <a href="#projects">Portfolio</a>
       <a href="#interests">3D Renders And Motion Graphics</a>
-      <a href="#contact">Contact</a>
-    </nav>
+      </nav>
 
     <div class="hamburger" id="hamburger">
       <span></span>
@@ -181,7 +180,7 @@ I focus on crafting bold visuals, expressive characters, and cinematic moments t
   <!-- Background Video -->
   <video autoplay muted loop playsinline class="motion-bg-video">
     <source src="videos/HackYukki2026.mp4" type="video/mp4">
-    Your browser does not support HTML5 video.
+
   </video>
 
   <!-- Content on top of video -->
