--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
 
   <!-- Loading Screen -->
-  <div class="loading-screen" id="loadingScreen">
-    <img src="images/plutokeytransparent.png" alt="Pluto Key" class="pluto-key">
-    <div class="logo">HackYukki</div>
-    <div class="loading-spinner"></div>
-  </div>
+<div class="loading-screen" id="loadingScreen">
+  <img src="images/plutokeytransparent.png" alt="Pluto Key" id="plutoKey">
+  <div class="logo">HackYukki</div>
+  <div class="loading-spinner"></div>
+</div>
+
 
   <!-- Header -->
   <header>
@@ -38,17 +39,19 @@
   <main class="container">
 
     <!-- Hero Section -->
-    <section class="hero-section">
-      <div class="hero-content" data-aos="fade-up">
-        <h1>HackYukki</h1>
-        <h3>3D Artist & Designer</h3>
-        <p>Transforming ideas into stunning visuals and immersive animations.</p>
-        <div class="buttons">
-          <a href="#bio" class="btn-primary">About Me</a>
-          
-      </div>
-      <img src="images/plutokeytransparent.png" alt="Pluto Key" class="pluto-key" />
-    </section>
+<section class="hero-section">
+  <div class="hero-content" data-aos="fade-up">
+    <h1>
+      HackYukki
+      <img src="images/plutokeytransparent.png" alt="Pluto Key" id="plutoHero">
+    </h1>
+    <h3>3D Artist & Designer</h3>
+    <p>Transforming ideas into stunning visuals and immersive animations.</p>
+    <div class="buttons">
+      <a href="#bio" class="btn-primary">About Me</a>
+    </div>
+  </div>
+</section>
 
     <!-- Bio Section -->
     <section id="bio" class="about-section">
