--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span></span>
       </div>
     </div>
-  </header>
+  </header>                              
 
   <main class="container">
 
@@ -155,7 +155,7 @@
     <div class="contact-links">
       <a href="https://www.youtube.com/@hackyukki8135" target="_blank"><img src="images/YouTube.png" alt="YouTube"> YouTube</a>
       <a href="https://www.instagram.com/hackyukki/" target="_blank"><img src="images/instagram.jpg" alt="Instagram"> Instagram</a>
-      <a href="https://web-cdn.bsky.app/profile/hackyukki.bsky.social" target="_blank"><img src="images/Bluesky.png" alt="Bluesky"> Bluesky</a>
+      <a href="https://web-cdn.bsky.app/profile/hackyukki.bsky.social" target="_blank"><img src="images/BlueSky.png" alt="BlueSky"> Bluesky</a>
     </div>
     <button class="close-btn" onclick="toggleContact(event)">Close</button>
   </div>
